--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 	<head>
   	<meta charset="utf-8">
   	<meta name="description" content="Your description goes here">
-  	<meta name="keywords" content="one, two, three">
+  	<meta name="Side Scroller Game" content="one, two, three">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Blank Template</title>
+		<title>Side Scroller</title>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
+
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<script type="text/javascript" src="js/main.js"></script>
+
+		<canvas id="canvas1"></canvas>
+
+		<img src="assets/player.png" alt="" id="player">
+		<script type="module" src="js/main.js"></script>
 	</body>
 </html>
