--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 		<canvas id="canvas1"></canvas>
 
 		<img src="assets/player.png" alt="" id="player">
+
+		<img src="assets/layer-5.png" alt="" id="layer5">
+		<img src="assets/layer-4.png" alt="" id="layer4">
+		<img src="assets/layer-3.png" alt="" id="layer3">
+		<img src="assets/layer-2.png" alt="" id="layer2">
+		<img src="assets/layer-1.png" alt="" id="layer1">
+
 		<script type="module" src="js/main.js"></script>
 	</body>
 </html>
