--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 		<img src="assets/layer-2.png" alt="" id="layer2">
 		<img src="assets/layer-1.png" alt="" id="layer1">
 
+		<img src="assets/enemy_fly.png" alt="" id="enemy_fly">
+		<img src="assets/enemy_plant.png" alt="" id="enemy_plant">
+		<img src="assets/enemy_spider_big.png" alt="" id="enemy_spider_big">
+
 		<script type="module" src="js/main.js"></script>
 	</body>
 </html>
