--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 		<img src="assets/enemy_plant.png" alt="" id="enemy_plant">
 		<img src="assets/enemy_spider_big.png" alt="" id="enemy_spider_big">
 
+		<img src="assets/fire.png" alt="fire" id="fire">
+
 		<script type="module" src="js/main.js"></script>
 	</body>
 </html>
