add collision animation and particles. end session

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 		<img src="assets/fire.png" alt="fire" id="fire">
 
+		<img src="assets/boom.png" alt="boom" id="collisionAnimation">
+
 		<script type="module" src="js/main.js"></script>
 	</body>
 </html>
