--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
 		<title>Side Scroller</title>
 
 		<!-- external CSS link -->
-
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 
 		<canvas id="canvas1"></canvas>
-
+		<!-- player -->
 		<img src="assets/player.png" alt="" id="player">
-
-		<img src="assets/layer-5.png" alt="" id="layer5">
-		<img src="assets/layer-4.png" alt="" id="layer4">
-		<img src="assets/layer-3.png" alt="" id="layer3">
-		<img src="assets/layer-2.png" alt="" id="layer2">
-		<img src="assets/layer-1.png" alt="" id="layer1">
-
+		<!-- background -->
+		<img src="assets/F_layer-5.png" alt="" id="layer5">
+		<img src="assets/F-layer-4.png" alt="" id="layer4">
+		<img src="assets/F-layer-3.png" alt="" id="layer3">
+		<img src="assets/F-layer-2.png" alt="" id="layer2">
+		<img src="assets/F-layer-1.png" alt="" id="layer1">
+		<!-- enemy -->
 		<img src="assets/enemy_fly.png" alt="" id="enemy_fly">
 		<img src="assets/enemy_plant.png" alt="" id="enemy_plant">
 		<img src="assets/enemy_spider_big.png" alt="" id="enemy_spider_big">
-
+		<!-- extra -->
 		<img src="assets/fire.png" alt="fire" id="fire">
-
+		<img src="assets/heart.png" alt="" id="lives">
 		<img src="assets/boom.png" alt="boom" id="collisionAnimation">
 
 		<script type="module" src="js/main.js"></script>
